# NSTU_Programming

./: .gitignore  README.md  hai.md
.vim/: coc-settings.json
semester2/Kursovaya/: g3v1.c  g3v10.c  g3v3.c  g3v9.c  g4v20.c  main.c  str_comp.c  Москвин Курсовая.docx
semester2/coursework/: g3v1.c  g3v10.c  g3v19.c  g3v9.c  g4v1.c  g4v11.c  g4v20.c  g4v8.c
semester2/lab1_8/: CMakeLists.txt  lab1_8.h  main.c
semester2/lab2_8/: CMakeLists.txt  main.c
semester2/lab3_8/: CMakeLists.txt  main.c
semester2/lab4_8/: CMakeLists.txt  lab4_8  main.c
semester2/lab5_8/: CMakeLists.txt  lab5_8  main.c
semester2/lab6_8/: CMakeLists.txt  input.txt  lab6_8  main.c
semester3/: mytools.c  mytools.h
semester3/at-04/coursework/: CMakeLists.txt  README.md  matrix.hpp  test.cpp
semester3/avt-018+019/: mytools.c  mytools.h
semester3/coursework/: README.md
semester3/lab1_13/: .gitignore  build.sh  main.c
semester3/lab3_13/: .gitignore  build.sh  main.c
semester3/lab4_13/: .gitignore  build.sh  client.c  server.c
semester4/ADS/coursework/: CMakeLists.txt
semester4/ADS/coursework/include/coursework/: base_graph.hpp  base_iterator.hpp  coursework.hpp  edge.hpp  graph_type.hpp  vertex.hpp  view_form.hpp
semester4/ADS/coursework/test/: CMakeLists.txt  main.cpp
semester4/ADS/lab1/: CMakeLists.txt  container.hpp  test.cpp
semester4/ADS/lab1/v2/: CMakeLists.txt  container.hpp  test.cpp
semester4/ADS/lab1/v3/: CMakeLists.txt  README.md  container.hpp  container_.hpp  menu.cpp  test.cpp
semester4/ADS/lab1/v5/: container.hpp  menu.cpp  test.cpp
(+311 files in other folders)
